[gd_scene load_steps=3 format=3 uid="uid://cximw1n7ocfqt"]

[ext_resource type="Script" path="res://script/options.gd" id="1_cwab2"]
[ext_resource type="Texture2D" uid="uid://0ll586uvek3n" path="res://assets/startScreen.png" id="2_qdyeo"]

[node name="options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwab2")

[node name="background" type="TextureRect" parent="."]
self_modulate = Color(0.313726, 0.313726, 0.313726, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qdyeo")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = 83.0
offset_right = 110.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="Label2" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "dias de Jam"

[node name="days_button" type="OptionButton" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
item_count = 7
selected = 4
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5
popup/item_6/text = "7"
popup/item_6/id = 6

[node name="quit_button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "voltar ao menu inicial"

[node name="fullscreeen" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Tela Cheia"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 263.0
offset_top = 218.0
offset_right = 887.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 80
text = "opções"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_selected" from="VBoxContainer2/HBoxContainer/days_button" to="." method="_on_days_button_item_selected"]
[connection signal="pressed" from="VBoxContainer2/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/fullscreeen" to="." method="_on_fullscreeen_pressed"]
